Adding Git Plugin and Altering Ignore and Attributes

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-Binaries
-DerivedDataCache
-Intermediate
-Saved
-.vscode
-.vs
-*.VC.db
-*.opensdf
-*.opendb
-*.sdf
-*.sln
-*.suo
-*.xcodeproj
+/Binaries
+/DerivedDataCache
+/Intermediate
+/Saved
+/*.sln
+/*.sdf
+/*.opensdf
+/*.suo
+/*.opendb
+/
+*.VC
+/.vs
+/.vscode
+/.db
+/
 *.xcworkspace
+/*.xcodeproj
